// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilterSideBar/> Matches the snapshot for any other category, i.e. USERS 1`] = `
<aside>
  <h1>
    Usage Analytics
  </h1>
  <ConnectFunction>
    <Category />
  </ConnectFunction>
  <ConnectFunction>
    <DateRange />
  </ConnectFunction>
  <ConnectFunction>
    <Interval />
  </ConnectFunction>
</aside>
`;

exports[`<FilterSideBar/> Matches the snapshot for category: TOP_FAVORITES 1`] = `
<aside>
  <h1>
    Usage Analytics
  </h1>
  <ConnectFunction>
    <Category />
  </ConnectFunction>
  <ConnectFunction>
    <EventType />
  </ConnectFunction>
  <ConnectFunction>
    <PageSize />
  </ConnectFunction>
  <ConnectFunction>
    <SortOrder />
  </ConnectFunction>
</aside>
`;

exports[`<FilterSideBar/> Matches the snapshot for default category: FAVORITE_VIEWS 1`] = `
<aside>
  <h1>
    Usage Analytics
  </h1>
  <ConnectFunction>
    <Category />
  </ConnectFunction>
  <ConnectFunction>
    <DateRange />
  </ConnectFunction>
  <ConnectFunction>
    <Interval />
  </ConnectFunction>
  <ConnectFunction>
    <AggregationLevel />
  </ConnectFunction>
  <ConnectFunction>
    <ChartType />
  </ConnectFunction>
</aside>
`;
